<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EcoCalendario Fermo</string>
    <string name="logout">Logout</string>
    <string name="menu">menu</string>
    <string name="info">info</string>
    <string name="eco_calendario">Eco Calendario</string>
    <string name="aggiungi_titolo">AGGIUNGI TITOLO</string>
    <string name="aggiungi_titolo_min">Aggiungi Titolo</string>
    <string name="da_ripetere_il">DA RIPETERE IL</string>
    <string name="seleziona_orario">SELEZIONA ORARIO</string>
    <string name="salva">SALVA</string>
    <string name="lun">LUN</string>
    <string name="mar">MAR</string>
    <string name="mer">MER</string>
    <string name="gio">GIO</string>
    <string name="ven">VEN</string>
    <string name="sab">SAB</string>
    <string name="dom">DOM</string>
    <string name="gestisci_promemoria">Gestisci \n Promemoria</string>
    <string name="imposta_promemoria">Imposta \n Promemoria</string>
    <string name="conferma_uscita">Sei sicuro di voler uscire?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="indifferenziata">Rifiuti non riciclabili</string>
    <string name="plastica">Plastica</string>
    <string name="carta">Carta e Cartone</string>
    <string name="giorni_festivi">In caso di giorni festivi il rifiuto verrà raccolto il primo giorno utile successivo</string>
    <string name="info_sostenibilita">Info Sostenibilita\'</string>
    <string name="inserisci_di_nuovo_la_password">Inserisci di nuovo la Password</string>
    <string name="registrati">Registrati</string>
    <string name="hai_gia_un_account_clicca_qui">Hai gia\' un account? Clicca qui!</string>
    <string name="cerca_qui">Cerca qui</string>
    <string name="oggetto">Oggetto</string>
    <string name="messaggio">Messaggio</string>
    <string name="invia">Invia</string>
    <string name="accedi">Accedi</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati!</string>
    <string name="rifiutario">Rifiutario</string>
    <string name="isole_ecologiche">Isole Ecologiche</string>
    <string name="informazioni">Informazioni</string>
    <string name="segnalazioni">Segnalazioni</string>
    <string name="aggiungi_memo">Aggiungi Promemoria</string>
    <string name="gestisci_memo">Gestisci Promemoria</string>
    <string name="lunedi">Lunedi</string>
    <string name="martedi">Martedi</string>
    <string name="mercoledi">Mercoledi</string>
    <string name="giovedi">Giovedi</string>
    <string name="venerdi">Venerdi</string>
    <string name="sabato">Sabato</string>
    <string name="domenica">Domenica</string>
    <string name="email_richiesta">Email Richiesta</string>
    <string name="email_non_valida">Email non valida</string>
    <string name="psw_richiesta">Password Richiesta</string>
    <string name="psw_non_valida">Password non valida</string>
    <string name="login_effettuato">Login effettuato</string>
    <string name="psw_errata">Password errata. Prova di nuovo o accedi con Google!</string>
    <string name="errore_utente">Non ci sono utenti registrati con questa email!</string>
    <string name="caratteri_minimi">Minimo 6 caratteri</string>
    <string name="non_corrisponde">Non corrisponde</string>
    <string name="reg_log_effettuati">Registrazione e Login effettuati</string>
    <string name="email_in_uso">Email già in uso</string>
    <string name="titolo_richiesto">Titolo Richiesto</string>
    <string name="disattiva_ottimizzazione">Disattivare ottimizzazione</string>
    <string name="messaggio_ottimizzazione">Per consentire l\'invio di notifiche, occorre disattivare l\'ottimizzazione della batteria!</string>
    <string name="errore_ottimizzazione">Impossibile aprire la schermata di ottimizzazione della batteria. Si prega di aggiungerlo manualmente</string>
    <string name="memo_impostato">Promemoria Impostato</string>
    <string name="connettiti">Connettiti ad una rete per visualizzare meglio le notizie!</string>
    <string name="no_pdf">Non sono disponibili applicazioni per visualizzare i pdf</string>
    <string name="invia_segnalazione">Invia Segnalazione</string>
    <string name="inserire_oggetto">Inserire oggetto</string>
    <string name="inserire_messaggio">Inserire messaggio</string>
    <string name="scegli_app_email">Scegli l\'applicazione per le email</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="me">M</string>
    <string name="g">G</string>
    <string name="v">V</string>
    <string name="s">S</string>
    <string name="d">D</string>
</resources>