<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddMemoActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_titolo"
            android:textSize="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/emmasophia"
            android:textAlignment="textStart"
            android:paddingTop="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTitolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTitolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/aggiungi_titolo_min"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/da_ripetere_il"
            android:textSize="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/emmasophia"
            android:textAlignment="textStart"
            android:paddingTop="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ToggleButton
                android:id="@+id/lun"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOff="@string/l"
                android:textOn="@string/l"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/toogle_text_color"/>
            <ToggleButton
                android:id="@+id/mar"
                android:layout_marginRight="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOff="@string/m"
                android:textOn="@string/m"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/toogle_text_color"/>
            <ToggleButton
                android:id="@+id/mer"
                android:layout_marginRight="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOff="@string/me"
                android:textOn="@string/me"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/toogle_text_color"/>
            <ToggleButton
                android:id="@+id/gio"
                android:layout_marginRight="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOff="@string/g"
                android:textOn="@string/g"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/toogle_text_color"/>
            <ToggleButton
                android:id="@+id/ven"
                android:layout_marginRight="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOff="@string/v"
                android:textOn="@string/v"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/toogle_text_color"/>
            <ToggleButton
                android:id="@+id/sab"
                android:layout_marginRight="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOff="@string/s"
                android:textOn="@string/s"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/toogle_text_color"/>
            <ToggleButton
                android:id="@+id/dom"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOff="@string/d"
                android:textOn="@string/d"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/toogle_text_color"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleziona_orario"
            android:textSize="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/emmasophia"
            android:textAlignment="textStart"
            android:paddingTop="20dp" />

        <TimePicker android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="clock" />

        <Button
            android:id="@+id/salva_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/salva"
            android:textSize="10dp"
            android:textColor="#FFFF"
            android:background="@color/colorAccent"
            android:fontFamily="@font/emmasophia"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="salvaMemo"/>
    </LinearLayout>
</ScrollView>