<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/txtSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oggetto"/>
        <EditText
            android:id="@+id/txtMsg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/messaggio"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#FFF"
            android:fontFamily="@font/emmasophia"
            android:textSize="10dp"
            android:layout_gravity="right"
            android:text="@string/invia"
            android:id="@+id/btnSend"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>