<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="#fff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/emmasophia"
            android:textAlignment="center"
            android:text="Sign up"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="Email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPasswordReg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordReg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inserisci_di_nuovo_la_password"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bt_sign_in_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="visible" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:textSize="10dp"
            android:background="@drawable/login_button"
            android:text="@string/registrati"
            android:fontFamily="@font/emmasophia"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text_go_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:text="@string/hai_gia_un_account_clicca_qui"
            android:onClick="viewLoginLayout"
            android:fontFamily="@font/emmasophia"
            android:textSize="8dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
